--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </thead>
     <tr style="text-align:center;">
         <td colspan="3" style="background-color: blue">
-            My first table
+            <p style="font-family:verdana">>My first table</p>
         </td>
     </tr>
     <tbody>
