--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 </style>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Roman Herasymenko</title>
 </head>
 <body>
+<h1 style="text-align:center;>
+    Roman Herasymenko
+</h1>
 <table style="width: 30%">
     <thead>
     </thead>
     <tr style="text-align:center;">
         <td colspan="3" style="background-color: blue">
-            <p style="font-family:verdana">>My first table</p>
+            <p style="font-family:Verdana">My first table</p>
         </td>
     </tr>
     <tbody>
