--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Roman Herasymenko</title>
 </head>
 <body>
-<h1 style="text-align:center;>
-    Roman Herasymenko
+<h1 style="text-align:center";">
+    <p style="text-align: left">Roman Herasymenko</p>
 </h1>
 <table style="width: 30%">
     <thead>
