--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <style>
     table, th, td {
-        border: 1px solid black
+        border: 1px solid black;
     }
 </style>
 <head>
@@ -43,8 +43,6 @@
                 <br>
                 3rd row
             </td>
-        </tr>
-        <tr style="text-align:center;">
             <td rowspan="2" style="background-color: yellow">
                 2nd cell
                 <br>
