--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 <head>
     <meta charset="UTF-8">
-    <title>Roman Herasymenko</title>
+    <title>Lesson 1 table</title>
 </head>
 <body>
 <h1 style="text-align:center";">
