--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Lesson 1 table</title>
 </head>
 <body>
-<h1 style="text-align:center";">
+<h1 style="text-align:center">
     <p style="text-align: left">Roman Herasymenko</p>
 </h1>
 <table style="width: 30%">
