--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Lesson 1 table</title>
 </head>
 <body>
-<h1 style="text-align:center">
-    <p style="text-align: left">Roman Herasymenko</p>
+<h1 style="text-align: left">
+    Roman Herasymenko
 </h1>
 <table style="width: 30%">
     <thead>
